[gd_scene load_steps=18 format=3 uid="uid://cphlt5ihrcd8v"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_nk64x"]
[ext_resource type="Texture2D" uid="uid://dg8itrsmr7h44" path="res://assets/textures/TILEMAP.png" id="2_vi3f7"]
[ext_resource type="PackedScene" uid="uid://hosqkmsah7s0" path="res://scene/coin_spawner.tscn" id="3_6h78r"]
[ext_resource type="AudioStream" uid="uid://mdsw2xewaybh" path="res://assets/audio/COIN.wav" id="4_ek48m"]
[ext_resource type="PackedScene" uid="uid://gvlyvetsdpr8" path="res://scene/truck.tscn" id="5_i7yc0"]
[ext_resource type="PackedScene" uid="uid://dobfbijgos8kh" path="res://scene/player.tscn" id="6_wpdrr"]
[ext_resource type="PackedScene" uid="uid://d2ngd3f33qmh1" path="res://scene/hud.tscn" id="7_bsvlj"]
[ext_resource type="PackedScene" uid="uid://bsua8ad67essn" path="res://scene/pause_menu.tscn" id="8_4a7o6"]
[ext_resource type="PackedScene" uid="uid://oc3p7yny62dq" path="res://scene/restart_menu.tscn" id="9_4065b"]

[sub_resource type="Shader" id="Shader_quucy"]
code = "shader_type canvas_item;
 
uniform vec2 direction = vec2(1.0, 0.0);
uniform float speed_scale = 10.;
 
void fragment(){
    vec2 move = direction * TIME * speed_scale;
    COLOR = texture(TEXTURE, UV + move);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2m3r7"]
shader = SubResource("Shader_quucy")
shader_parameter/direction = Vector2(1, 2.08165e-12)
shader_parameter/speed_scale = 10.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hc0ju"]
texture = ExtResource("2_vi3f7")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_40eh7"]
sources/0 = SubResource("TileSetAtlasSource_hc0ju")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xuymp"]
size = Vector2(125, 1219)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g5dfi"]
size = Vector2(2028, 124)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_560qe"]
size = Vector2(110.5, 1214)

[sub_resource type="Environment" id="Environment_c70pd"]
background_mode = 3
glow_enabled = true
glow_bloom = 0.22
glow_blend_mode = 0
fog_enabled = true

[node name="desert" type="Node2D"]
process_mode = 1
script = ExtResource("1_nk64x")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1280, 2.08165e-12)

[node name="TileMap" type="TileMap" parent="ParallaxBackground/ParallaxLayer2"]
material = SubResource("ShaderMaterial_2m3r7")
use_parent_material = true
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_40eh7")
format = 2
layer_0/tile_data = PackedInt32Array(262164, 65536, 0, 262163, 65536, 0, 262162, 65536, 0, 262161, 65536, 0, 262160, 65536, 0, 262159, 65536, 0, 262158, 65536, 0, 262157, 65536, 0, 262156, 65536, 0, 262155, 65536, 0, 262154, 65536, 0, 262153, 65536, 0, 262152, 65536, 0, 262151, 65536, 0, 262150, 65536, 0, 262149, 65536, 0, 262148, 65536, 0, 262147, 65536, 0, 262146, 65536, 0, 262145, 65536, 0, 262144, 65536, 0, 327679, 65536, 0, 393215, 131072, 0, 327680, 131072, 0, 327681, 131072, 0, 327682, 131072, 0, 327683, 131072, 0, 327684, 131072, 0, 327685, 131072, 0, 327686, 131072, 0, 327687, 131072, 0, 327688, 131072, 0, 327689, 131072, 0, 327690, 131072, 0, 327691, 131072, 0, 327692, 131072, 0, 327693, 131072, 0, 327694, 131072, 0, 327695, 131072, 0, 327696, 131072, 0, 327697, 131072, 0, 327698, 131072, 0, 327699, 131072, 0, 327700, 131072, 0, 196608, 65536, 0, 196609, 65536, 0, 196610, 65536, 0, 196611, 65536, 0, 196612, 65536, 0, 196613, 65536, 0, 196614, 65536, 0, 196615, 65536, 0, 196616, 65536, 0, 196617, 65536, 0, 196618, 65536, 0, 196619, 65536, 0, 196620, 65536, 0, 196621, 65536, 0, 196622, 65536, 0, 196623, 65536, 0, 196624, 65536, 0, 196625, 65536, 0, 196626, 65536, 0, 196627, 65536, 0, 393216, 65536, 0, 393217, 65536, 0, 393218, 65536, 0, 393219, 65536, 0, 393220, 65536, 0, 393221, 65536, 0, 393222, 65536, 0, 393223, 65536, 0, 393224, 65536, 0, 393225, 65536, 0, 393226, 65536, 0, 393227, 65536, 0, 393228, 65536, 0, 393229, 65536, 0, 393230, 65536, 0, 393231, 65536, 0, 393232, 65536, 0, 393233, 65536, 0, 393234, 65536, 0, 393235, 65536, 0, 458752, 65536, 0, 458753, 65536, 0, 458754, 65536, 0, 458755, 65536, 0, 458756, 65536, 0, 458757, 65536, 0, 458758, 65536, 0, 458759, 65536, 0, 458760, 65536, 0, 458761, 65536, 0, 458762, 65536, 0, 458763, 65536, 0, 458764, 65536, 0, 458765, 65536, 0, 458766, 65536, 0, 458767, 65536, 0, 458768, 65536, 0, 458769, 65536, 0, 458770, 65536, 0, 458771, 65536, 0, 458772, 65536, 0, 458751, 65536, 0, 524287, 65536, 0, 393236, 65536, 0, 196628, 65536, 0, 262143, 65536, 0, 196607, 65536, 0, 131072, 65536, 0, 131073, 65536, 0, 131074, 65536, 0, 131075, 65536, 0, 131076, 65536, 0, 131077, 65536, 0, 131078, 65536, 0, 131079, 65536, 0, 131080, 65536, 0, 131081, 65536, 0, 131082, 65536, 0, 131083, 65536, 0, 131084, 65536, 0, 131085, 65536, 0, 131086, 65536, 0, 131087, 65536, 0, 131088, 65536, 0, 131089, 65536, 0, 131090, 65536, 0, 131091, 65536, 0, 131092, 65536, 0, 524308, 65536, 0, 524307, 65536, 0, 524306, 65536, 0, 524305, 65536, 0, 524304, 65536, 0, 524303, 65536, 0, 524302, 65536, 0, 524301, 65536, 0, 524300, 65536, 0, 524299, 65536, 0, 524298, 65536, 0, 524297, 65536, 0, 524296, 65536, 0, 524295, 65536, 0, 524294, 65536, 0, 524293, 65536, 0, 524292, 65536, 0, 524291, 65536, 0, 524290, 65536, 0, 524289, 65536, 0, 524288, 65536, 0, 589823, 65536, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 655359, 0, 0, 720895, 0, 0, 786431, 0, 0, 589844, 0, 0, 655380, 0, 0, 720916, 0, 0, 655381, 0, 0, 720917, 0, 0, 655382, 0, 0, 720918, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 655358, 0, 0, 720894, 0, 0, 786430, 0, 0, 655379, 0, 0, 589843, 0, 0, 720915, 0, 0, 589846, 0, 0, 589845, 0, 0, 131070, 0, 0, 65534, 0, 0, -2, 0, 0, -65518, 0, 0, -65519, 0, 0, -65520, 0, 0, -65521, 0, 0, -65522, 0, 0, -65523, 0, 0, -65524, 0, 0, -65525, 0, 0, -65526, 0, 0, -65527, 0, 0, -65528, 0, 0, -65529, 0, 0, -65530, 0, 0, -65531, 0, 0, -65532, 0, 0, -65533, 0, 0, -65534, 0, 0, -65535, 0, 0, -65536, 0, 0, -1, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 65553, 0, 0, 65552, 0, 0, 65551, 0, 0, 65550, 0, 0, 65549, 0, 0, 65548, 0, 0, 65547, 0, 0, 65546, 0, 0, 65545, 0, 0, 65544, 0, 0, 65543, 0, 0, 65542, 0, 0, 65541, 0, 0, 65540, 0, 0, 65539, 0, 0, 65538, 0, 0, 65537, 0, 0, 65536, 0, 0, 131071, 0, 0, 65558, 0, 0, 22, 0, 0, -65514, 0, 0, -65515, 0, 0, -65516, 0, 0, -65517, 0, 0, 18, 0, 0, 19, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 21, 0, 0, 20, 0, 0, 65554, 0, 0)
layer_1/tile_data = PackedInt32Array(589831, 262144, 0, 655373, 262144, 0, 7, 262144, 0, 65553, 262144, 0)

[node name="moving stuffs" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="coin_container" type="Node2D" parent="moving stuffs"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="moving stuffs"]
position = Vector2(318, 494)
shape = SubResource("RectangleShape2D_xuymp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="moving stuffs"]
position = Vector2(992, -62)
shape = SubResource("RectangleShape2D_g5dfi")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="moving stuffs"]
position = Vector2(1713, 453)
shape = SubResource("RectangleShape2D_560qe")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="moving stuffs"]
position = Vector2(756, 785)
shape = SubResource("RectangleShape2D_g5dfi")

[node name="Camera2D" type="Camera2D" parent="moving stuffs"]
position = Vector2(1020, 359)

[node name="coin_spawner" parent="moving stuffs" instance=ExtResource("3_6h78r")]

[node name="coin_aud" type="AudioStreamPlayer2D" parent="moving stuffs"]
stream = ExtResource("4_ek48m")
pitch_scale = 1.09
max_distance = 5000.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_c70pd")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
color = Color(0.281187, 0.281187, 0.281187, 1)
energy = 0.18
blend_mode = 1

[node name="Truck" parent="." instance=ExtResource("5_i7yc0")]
position = Vector2(1373, 229)

[node name="Player" parent="." instance=ExtResource("6_wpdrr")]
position = Vector2(500, 350)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("7_bsvlj")]
offset_left = 12.0
offset_top = 3.0
offset_right = 12.0
offset_bottom = 3.0

[node name="pause_menu" parent="UI" instance=ExtResource("8_4a7o6")]
process_mode = 3
visible = false

[node name="restart_menu" parent="UI" instance=ExtResource("9_4065b")]
visible = false

[connection signal="alive" from="." to="moving stuffs/coin_spawner" method="_on_game_alive"]
[connection signal="alive" from="." to="Truck/turret" method="_on_game_alive"]
[connection signal="no_of_coins" from="." to="moving stuffs/coin_spawner" method="_on_game_no_of_coins"]
[connection signal="child_entered_tree" from="moving stuffs/CollisionShape2D" to="." method="_on_collision_shape_2d_child_entered_tree"]
[connection signal="coin_spawned" from="moving stuffs/coin_spawner" to="." method="_on_coin_spawner_coin_spawned"]
[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]

[editable path="Truck"]
